[package]
name = "rs_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf8_slice = "1.0.0"
serde = "1.0"
serde_json = "1.0"
# rand = "0.3"
# hammer = { version = "0.5.0"}
# color = { git = "https://github.com/bjz/color-rs" }
# geometry = { path = "crates/geometry" }
